syntax = 'proto3';

package subscriber;

message Sender {
    string name = 1;
    string ip = 2;
    string port = 3;
}

message Message {
    Sender  sender = 1;
    string  text = 2;
}

// Service definition for gRPC plugin
service DisplayMessages {
    rpc DisplayText(Message) returns (Message) {}
    rpc DisplaySubscribe(Sender) returns (Sender) {}
    rpc DisplayUnsubscribe(Sender) returns (Sender) {}
}